--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,7 +4,7 @@
         "name": "Launch",
         "type": "node",
         "request": "launch",
-        "program": "${workspaceRoot}/novel/index.js",
+        "program": "${workspaceRoot}/script/novel.js",
         "stopOnEntry": false,
         "args": [],
         "cwd": "${workspaceRoot}",
