--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
 FROM ubuntu:latest
 MAINTAINER adam yizhilcd@gmail.com
 
-RUN apt-get update && apt-get install -y nginx mongodb mysql node
+RUN apt-get update && apt-get install -y nginx mongodb mysql node zsh
 
 EXPOSE 80 336 27017
