--- a/script/package.json
+++ b/script/package.json
@@ -1,15 +1,13 @@
 {
-    "name": "koa_raspbian",
-    "version": "1.0.0",
-    "description": "",
-    "main": "app.js",
-    "scripts": {
-        "test": "echo \"Error: no test specified\" && exit 1"
-    },
-    "author": "Adam Lee",
-    "license": "MIT",
-    "dependencies": {
-        "koa": "^1.2.4",
-        "koa-router": "^5.4.0",
-    }
+  "name": "koa_raspbian",
+  "version": "1.0.0",
+  "description": "",
+  "main": "koa.js",
+  "dependencies": {},
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Adam Lee",
+  "license": "MIT"
 }
