--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
     "css-loader": "^0.26.1",
     "glob": "^7.1.1",
     "style-loader": "^0.13.1",
+    "vue-loader": "^10.3.0",
+    "vue-template-compiler": "^2.1.10",
     "webpack": "^1.14.0",
     "webpack-dev-server": "^1.16.2"
   },
@@ -34,6 +36,7 @@
     "react-dom": "^15.4.2",
     "react-redux": "^5.0.2",
     "react-test": "file:react",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "vue": "^2.1.10"
   }
 }
