--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,10 +1,13 @@
 {
     "version": "0.2.0",
-    "configurations": [{
+    "configurations": [
+        
+        {
+
         "name": "Launch",
         "type": "node",
         "request": "launch",
-        "program": "${workspaceRoot}/script/novel.js",
+        "program": "${workspaceRoot}/app.js",
         "stopOnEntry": false,
         "args": [],
         "cwd": "${workspaceRoot}",
