--- a/script/package.json
+++ b/script/package.json
@@ -3,7 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "koa.js",
-  "dependencies": {},
+  "dependencies": {
+    "express": "^4.15.2",
+    "sqlite3": "^3.1.8"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
