--- a/package.json
+++ b/package.json
@@ -1,12 +1,7 @@
 {
   "name": "yizhi",
   "version": "1.0.0",
-  "description": "some notes",
-  "main": "webpack.config.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "node ./script/server.js"
-  },
+  "description": "resume",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/AdonLee/adonlee.github.com.git"
@@ -16,27 +11,5 @@
   "bugs": {
     "url": "https://github.com/AdonLee/adonlee.github.com/issues"
   },
-  "homepage": "https://github.com/AdonLee/adonlee.github.com#readme",
-  "devDependencies": {
-    "babel-core": "^6.22.1",
-    "babel-loader": "^6.2.10",
-    "babel-preset-es2015": "^6.22.0",
-    "babel-preset-react": "^6.22.0",
-    "babel-preset-stage-0": "^6.22.0",
-    "css-loader": "^0.26.1",
-    "glob": "^7.1.1",
-    "style-loader": "^0.13.1",
-    "vue-loader": "^10.3.0",
-    "vue-template-compiler": "^2.1.10",
-    "webpack": "^1.14.0",
-    "webpack-dev-server": "^1.16.2"
-  },
-  "dependencies": {
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.2",
-    "react-test": "file:react",
-    "redux": "^3.6.0",
-    "vue": "^2.1.10"
-  }
+  "homepage": "https://github.com/AdonLee/adonlee.github.com#readme"
 }
